TWC3167-1645:CSS fixes for manage,consmuption country  scrollabar,pricing stratergy overflow. (#1222)

--- a/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
@@ -1049,3 +1049,6 @@ kendo-tabstrip.tabs-coll {
 #DELoading .ss-loading-overlay {
     left: 0 !important;
 }
+.multiselect-scroll-style.cdk-overlay-pane {
+    overflow-y: auto !important
+}
