--- a/Intel.MyDeals/Client/src/app/contract/managerPct/managerPct.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/managerPct/managerPct.component.css
@@ -630,3 +630,12 @@ kendo-tabstrip.art-kendo-bars {
     padding: 10px;
     margin: -8px;
 }
+.k-style-box:hover {
+    box-shadow: 0 2px 6px rgb(0 0 0 / 20%), 0 2px 3px rgb(0 0 0 / 5%);
+}
+.btn-rounded-sty:hover {
+    color: #ffffff !important;
+}
+.new-view .help-search-backgrd {
+    background: linear-gradient(to bottom, #fdfdfd 0%,#d9d9d9 100%) !important;
+}
